# mowglinext

./: .clang-format  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  MOWGLINEXT_TODO.md  OBSTACLE_WEDGE_RECOVERY_SPEC.md  README.md  SAFETY_REVIEW_2026-07-23.md  SECURITY.md  TODO-runtime-backups.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  post-start.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/scripts/: install-ros-apt-source.sh
.github/workflows/: _sensor-docker.yml  claude-improve.yml  firmware-ci.yml  gui-docker.yml  msg-codegen-drift.yml  pages.yml  protocol-version-drift.yml  ros2-ci.yml  ros2-docker.yml  sensors-gps.yml  sensors-nmea.yml  welcome.yml  wiki-sync.yml  wiki-update.yml
artifacts/: live-unicore-freset-signalgroup-probe-stdlib.sh  live-unicore-freset-signalgroup-probe.sh
docker/: .env.example  README.md  docker-compose.simulation.yaml
docker/config/: cyclonedds.xml
docs/: FIRST_BOOT.md  GNSS_INTEGRATION_AUDIT.md  HANDOFF_FUSION_GRAPH.md  IMPORT_OPENMOWER_MAP.md  UNIVERSAL_GNSS_SIDECAR_MIGRATION.md  gnss_gui_design.md  index.html  install.sh  style.css  test_install.sh  test_web_composer.sh  unicore_live_validate.md  unicore_profiles.md
docs/claude/: commands.md  contributing.md  high-level-api.md  ros2-specifics.md  session-monitoring.md
firmware/scripts/: board_defaults_parity.py  package_release.py  protocol_baseline.json  protocol_version_guard.py
gui/: Dockerfile  README.md  generate_go_msgs.sh  go.mod  go.sum  main.go  tygo.yaml
gui/asserts/: board.h  board.h.template  mower_config.schema.json
gui/docs/: docs.go  swagger.json  swagger.yaml
gui/web/: .gitignore  index.html  package.json  playwright.config.ts  vitest.config.ts
install/: mowglinext.sh  test_mowglinext.sh
install/config/: cyclonedds.xml
ros2/: Dockerfile  Makefile  README.md
ros2/src/mowgli_behavior/: CMakeLists.txt  package.xml
ros2/src/mowgli_behavior/include/mowgli_behavior/: bt_context.hpp  calibration_nodes.hpp  condition_nodes.hpp  coverage_nodes.hpp  coverage_persistence.hpp  detour_resume.hpp  docking_nodes.hpp  navigation_nodes.hpp  status_nodes.hpp  utility_nodes.hpp
ros2/src/mowgli_behavior/src/: behavior_tree_node.cpp  calibration_nodes.cpp  condition_nodes.cpp  coverage_nodes.cpp  coverage_persistence.cpp  docking_nodes.cpp  navigation_nodes.cpp  recording_nodes.cpp  register_nodes.cpp  status_nodes.cpp
ros2/src/mowgli_behavior/test/: test_battery_critical_resume.cpp  test_coverage_nodes.cpp  test_coverage_persistence.cpp  test_coverage_resume_location.cpp  test_coverage_transit_gap.cpp  test_detour_resume.cpp  test_docking_boundary_exempt.cpp  test_get_next_unmowed_area.cpp  test_gnss_status_authority.cpp  test_obstacle_recovery.cpp  test_set_nav2_lifecycle.cpp  test_swath_progress.cpp  test_wheel_slip_stuck.cpp
ros2/src/mowgli_behavior/trees/: coverage_bt.xml  main_tree.xml  navigate_to_pose.xml
ros2/src/mowgli_coverage/: CMakeLists.txt  package.xml
ros2/src/mowgli_coverage/include/mowgli_coverage/: coverage_planning.hpp  coverage_server.hpp
ros2/src/mowgli_coverage/src/: coverage_planning.cpp  coverage_server.cpp
ros2/src/mowgli_coverage/test/: test_coverage_planning.cpp
ros2/src/mowgli_hardware/: CMakeLists.txt  mowgli_hardware_plugin.xml  package.xml
ros2/src/mowgli_hardware/firmware/: mowgli_protocol.h
ros2/src/mowgli_hardware/include/mowgli_hardware/: angular_rate_controller.hpp  bridge_comms.hpp  clock_fit.hpp  ll_datatypes.hpp  motor_speed_velocity.hpp  mowgli_system_interface.hpp  odometry_publisher.hpp  packet_handler.hpp  serial_port.hpp  velocity_pwm.hpp  wheel_rate_controller.hpp  wz_pulse_modulator.hpp
ros2/src/mowgli_hardware/src/: clock_fit.cpp  hardware_bridge_node.cpp  mowgli_system_interface.cpp  odometry_publisher.cpp  packet_handler.cpp  serial_port.cpp
ros2/src/mowgli_hardware/test/: test_angular_rate_controller.cpp  test_clock_fit.cpp  test_motor_speed_velocity.cpp  test_protocol.cpp  test_serial_port.cpp  test_velocity_pwm.cpp  test_wheel_rate_controller.cpp  test_wz_pulse_modulator.cpp
ros2/src/mowgli_mavros_bridge/: CMakeLists.txt  package.xml
ros2/src/mowgli_mavros_bridge/include/: mavros_hardware_bridge_node.hpp
ros2/src/mowgli_mavros_bridge/src/: mavros_hardware_bridge_node.cpp
ros2/src/mowgli_simulation/: CMakeLists.txt  package.xml
ros2/src/mowgli_simulation/config/: gazebo_bridge.yaml
ros2/src/mowgli_simulation/include/mowgli_simulation/: firmware_wheel_model.hpp
ros2/src/mowgli_simulation/launch/: webots_minimal.launch.py
ros2/src/mowgli_simulation/models/mowgli_mower/: model.sdf
ros2/src/mowgli_simulation/mowgli_simulation/: kinematic_drive.py
ros2/src/mowgli_simulation/protos/: MowgliMower.proto
ros2/src/mowgli_simulation/scripts/: sim_cmd_vel_unstamp.py  sim_imu_noise.py  sim_navsat_rtk_fix.py  sim_wheel_slip.py
ros2/src/mowgli_simulation/src/: fake_hardware_bridge_node.cpp  sim_actuation_node.cpp
ros2/src/mowgli_simulation/test/: test_firmware_wheel_model.cpp
ros2/src/mowgli_simulation/urdf_webots/: mowgli_webots.urdf
ros2/src/mowgli_simulation/worlds/: garden.sdf
ros2/src/mowgli_simulation/worlds_webots/: .mowgli_garden.wbproj  mowgli_garden.wbt
sensors/: README.md
sensors/gps/mowgli_gnss_bridge/: CMakeLists.txt  package.xml
sensors/gps/mowgli_gnss_bridge/include/mowgli_gnss_bridge/: universal_gnss_topic_bridge.hpp
sensors/gps/mowgli_gnss_bridge/src/: main.cpp  universal_gnss_topic_bridge.cpp
sensors/gps/mowgli_gnss_bridge/test/: test_universal_gnss_topic_bridge.cpp
tools/: headland_viz.html
tools/motor/: CMakeLists.txt  README.md  package.xml  setup.cfg
tools/motor/mowgli_tools/: __init__.py  drive_pid_math.py  drive_pid_tuner.py  robot_hardware_config.py
tools/motor/scripts/: tune_drive_pid
tools/motor/test/: test_drive_pid_math.py  test_drive_pid_tuner.py
wiki/: AI-Assisted-Contributing.md  Architecture.md  Configuration.md  Contributing.md  Deployment.md  GUI.md  Getting-Started.md  Home.md  Sensors.md  Simulation.md  User-Guide.md  _Sidebar.md
(+613 files in other folders)
