<?xml version="1.0"?>
<package format="3">
  <name>mowgli_mavros_bridge</name>
  <version>0.1.0</version>
  <description>MAVROS/Pixhawk hardware bridge for Mowgli</description>

  <maintainer email="pepeuch@gmail.com">You</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>mowgli_interfaces</depend>
  <depend>mavros</depend>
  <depend>mavros_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>