<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mowgli_gnss_bridge</name>
  <version>0.1.0</version>
  <description>
    C++ port of the Universal GNSS topic bridge ("topic manager"). Subscribes to
    the internal universal_gnss_ros2 status/RTCM topics plus /diagnostics and
    republishes them onto the public Mowgli GNSS contract (mowgli_interfaces/GnssStatus
    and rtcm_msgs/Message). Behaviour-exact replacement for the Python
    universal_gnss_topic_bridge.py, moved into rclcpp to cut per-message
    interpreter overhead on the Raspberry Pi GNSS sidecar.
  </description>
  <maintainer email="cedric@mowgli.dev">Cedric</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>diagnostic_msgs</depend>
  <depend>rtcm_msgs</depend>
  <depend>mowgli_interfaces</depend>
  <depend>universal_gnss_ros2</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
